# Twitter-emotion-detection-MLOps

./: .gitignore  Dockerfile  main.py  params.yaml  prometheus.yml  pyproject.toml  requirements.txt  retraining_hook.py  test_metrics.py
.dvc/: config
.github/workflows/: ci.yaml
deploy/scripts/: start_docker.sh
flask_app/: app.py  requirements.txt
scripts/: promote_model.py
src/data/: data_ingestion.py
src/model/: model_evaluation.py  register_model.py
tests/: test_flask_app.py  test_model.py
