[project]
name = "monitoring-sentiment-analysis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.5.10",
    "dvc[s3]>=3.60.1",
    "flask>=3.1.1",
    "matplotlib>=3.10.3",
    "mlflow<3.0",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "prometheus-client>=0.22.1",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
